+ Added small tweak for creative mode: empty buckets will remain empty, so you can empty the ocean as much as you like. Full buckets remain full, as well.
+ Additional creative mode tweak: "attacking" mob spawner with hand changes the level of mob it spawns.
+ Added missingTexture sprite.
* Changed the name of a couple items (was abbreviated).

Minicraft+ version 1.9.3

+ added command line argument to change the save directory of the world files.
* revised input system to (hopefully) work on any language keyboard/computer.
+ added back feature where mobs stay away during the first night.
* Reduced world load time from 2 seconds to about half a second, for me). It used to generate new levels needlessly, but now it doesn't.
+ Loading has a progress bar. Though honestly, it doesn't need one.

Minicraft+ version 1.9.2

* HUGE renovations to the code; might not see many changes to functionality, but entirely new bugs are bound to crop up...
* renovated entities
* renovated menus, a bit
+ added Key Binding Menu, finally! You can now customize key controls, and save them. Accessible from the title screen, and the pause menu.
+ added spanish keyboard(/computer?) support... for the enter (and backspace) key... but that's all you need to access and change the key binding menu.
+ Key bindings, sound, and autosave options are loaded on startup, in a special file that applies to all saves; like beating the second airwizard.
+ world difficulty is saved for each world

Minicraft+ version 1.9.1

= Armor now functions as a damage buffer rather than extra hearts; you take damage after only a certain number of damage points accumulate.
+ Armor lasts longer.
= Rate of hunger bar healing health depends on hunger; still happens when less than full health.
- removed player's restriction on movement while being hurt
+ Added version number to save file
+ Hunger bar now decreases in a better way (in my opinion)
# fixed all the bugs I could find!

Minicraft+ version 1.9
